@@ -1,14 +1,13 @@
 package com.example.demo.util;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class ValidationUtil {
 
-    private static final List<String> SEASONS =
-            Arrays.asList("Kharif", "Rabi", "Summer");
+    private static final List<String> VALID_SEASONS =
+            List.of("Kharif", "Rabi", "Summer");
 
     public static boolean validSeason(String season) {
-        return SEASONS.contains(season);
+        return VALID_SEASONS.contains(season);
     }
 }
